          the _type.indices_referenced_id attribute.
        - a check that detects improper usage of
          the _type.contents_referenced_id attribute.
        - a check that detects incompatibilities between the attributes
          of linked data items.
    - cif_ddlm_validate:
        - the '--follow-iucr-style-guide' and '--no-follow-iucr-style-guide'
          options.
  * Changed:
    - cif_molecule:
        - reworded several warning messages.
    - COD::CIF::DDL::DDLm:
        - improved the canonicalisation of 'Imag' and 'Complex'
          DDLm content type values.
  * Fixed:
    - COD::CIF::Data:
        - ensured that warning messages in the get_sg_data() subroutine
          are always output in the same order.
    - COD::CIF::DDL::DDLm::Validate:
        - updated the check_su_eligibility() subroutine to properly handle
          the special case of the '_description_example.case' attribute.
        - updated the handling of 'Imag' and 'Complex' content types to
          allow standard uncertainties.

cod-tools (3.3.0)

  * Added:
    - cif_ddlm_dic_check:
        - multiple checks related to the DICTIONARY_AUDIT loop.
        - a check that detects improper definition revision dates.
        - a check that detects measurand data items that do not
          have associated standard uncertainty (SU) data items.
        - a check that detects data names that deviate from
          the IUCr naming convention.
        - a check that detects situations when the type dimension
          attribute is used with incompatible type containers.
        - a check that detects situations when a measurand item
          and the associated SU data item have different units
          of measurement.
        - a check that detects improper _name.linked_item_id
          attribute values.
        - a check that detects improper usage of
          the _enumeration_default.value attribute.
        - a check that detects improper usage of