@@ -1,0 +1,1 @@
+Check the way data items of the 'Word' content type are validated.
