@@ -4,6 +4,7 @@ loop_
 _category.key
 _category.index_item
 _category.text_item
+_category.word_item
 _category.code_item
 _category.name_item
 _category.tag_item
@@ -19,20 +20,20 @@ _category.real_item
 _category.imag_item
 _category.complex_item
 _category.symop_item
-1 ? ? ? ? ? ? ? ? ? ? ? ? ? ? ? ? ?
-2 . . . . . . . . . . . . . . . . .
-3 '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?'
-4 '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.'
-5 "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?"
-6 "." "." "." "." "." "." "." "." "." "." "." "." "." "." "." "." "."
+1 ? ? ? ? ? ? ? ? ? ? ? ? ? ? ? ? ? ?
+2 . . . . . . . . . . . . . . . . . .
+3 '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?' '?'
+4 '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.'
+5 "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?" "?"
+6 "." "." "." "." "." "." "." "." "." "." "." "." "." "." "." "." "." "."
 7 '''?''' '''?''' '''?''' '''?''' '''?''' '''?''' '''?''' '''?''' '''?'''
-  '''?''' '''?''' '''?''' '''?''' '''?''' '''?''' '''?''' '''?'''
+  '''?''' '''?''' '''?''' '''?''' '''?''' '''?''' '''?''' '''?''' '''?'''
 8 '''.''' '''.''' '''.''' '''.''' '''.''' '''.''' '''.''' '''.''' '''.'''
-  '''.''' '''.''' '''.''' '''.''' '''.''' '''.''' '''.''' '''.'''
+  '''.''' '''.''' '''.''' '''.''' '''.''' '''.''' '''.''' '''.''' '''.'''
 9 """?""" """?""" """?""" """?""" """?""" """?""" """?""" """?""" """?"""
-  """?""" """?""" """?""" """?""" """?""" """?""" """?""" """?"""
+  """?""" """?""" """?""" """?""" """?""" """?""" """?""" """?""" """?"""
 10 """.""" """.""" """.""" """.""" """.""" """.""" """.""" """.""" """."""
-   """.""" """.""" """.""" """.""" """.""" """.""" """.""" """."""
+   """.""" """.""" """.""" """.""" """.""" """.""" """.""" """.""" """."""
 11
 ;?
 ;
@@ -68,7 +69,11 @@ _category.symop_item
 ;
 ;?
 ;
+;?
+;
 12
+;.
+;
 ;.
 ;
 ;.
