@@ -19,11 +19,26 @@ aA
 Aa
 a
 loop_
+_looped_word_category.key
+a
+A
+aA
+Aa
+a
+Žąsis
+žąsis
+Žąsis
+ŽĄSIS
+loop_
 _looped_code_category.key
 a
 A
 aA
 Aa
+Žąsis
+žąsis
+Žąsis
+ŽĄSIS
 loop_
 _looped_name_category.key
 a
