@@ -1,0 +1,16 @@
+#\#CIF_2.0
+data_word
+loop_
+_category.key
+_category.word_item
+1 Text_without_spaces
+2 "Text with spaces"
+3 "Text	with	tabs"
+4 'Unikodinės_raidės'
+5
+;Multiline_text_without_a_newline
+;
+6
+;
+Multiline_text_with_a_newline
+;
