@@ -1,18 +1,19 @@
 #\#CIF_2.0
 ##############################################################################
 #                                                                            #
-#                  FAKE DICTIONARY FOR TESTING PURPOSES                      #
+#               TEST DICTIONARY USED FOR TESTING THE VALIDATION              #
+#                              OF CONTENTS TYPE                              #
 #                                                                            #
 ##############################################################################
-data_FAKE_DIC
+data_TEST_CONTENTS_TYPE_DIC
 
-    _dictionary.title            FAKE_DIC
+    _dictionary.title            TEST_CONTENTS_TYPE_DIC
     _dictionary.class            Instance
-    _dictionary.version          0.0.1
-    _dictionary.date             2021-10-28
-    _dictionary.uri              http://www.fake.org/fake.dic
-    _dictionary.ddl_conformance  3.11.10
-    _dictionary.namespace        FakeDic
+    _dictionary.version          1.0.0
+    _dictionary.date             2021-11-08
+    _dictionary.uri              https://www.example.com/test_contents_type.dic
+    _dictionary.ddl_conformance  4.1.0
+    _dictionary.namespace        SoftwareTest
     _description.text
 ;
     This dictionary contains fake definitions for validator testing purposes.
@@ -21,7 +22,7 @@ data_FAKE_DIC
     _dictionary_audit.version
     _dictionary_audit.date
     _dictionary_audit.revision
-    0.0.1 2021-10-28 'Initial release of the dictionary.'
+    1.0.0 2021-11-08 'Initial release of the dictionary.'
 
 save_PARENT
     _definition.id               PARENT
@@ -33,7 +34,7 @@ save_PARENT
      This category is parent of all other categories in the FAKE_DIC
      dictionary.
 ;
-    _name.category_id            FAKE_DIC
+    _name.category_id            TEST_CONTENTS_TYPE_DIC
     _name.object_id              PARENT
 save_
 
@@ -130,6 +131,27 @@ save_category.text_item
     _type.source                 Assigned
     _type.container              Single
     _type.contents               Text
+save_
+
+save_category.word_item
+    _definition.id               '_category.word_item'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2021-11-08
+    _description.text
+;
+     A 'Word' field.
+;
+    _description.common
+;
+     A 'Word' field.
+;
+    _name.category_id            category
+    _name.object_id              word_item
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Word
 save_
 
 save_category.code_item
