@@ -1,19 +1,19 @@
 #\#CIF_2.0
 ##############################################################################
 #                                                                            #
-#   FAKE DICTIONARY WITH LOOPED CATEGORIES WITH VARIOUS CATEGORY KEYS FOR    #
+#   TEST DICTIONARY WITH LOOPED CATEGORIES WITH VARIOUS CATEGORY KEYS FOR    #
 #                              TESTING PURPOSES                              #
 #                                                                            #
 ##############################################################################
 data_FAKE_KEY_DIC
 
-    _dictionary.title            FAKE_KEY_DIC
+    _dictionary.title            TEST_KEY_DIC
     _dictionary.class            Instance
-    _dictionary.version          0.1.0
-    _dictionary.date             2021-10-28
-    _dictionary.uri              http://www.fake.org/fake_key.dic
-    _dictionary.ddl_conformance  3.11.10
-    _dictionary.namespace        Test
+    _dictionary.version          0.2.0
+    _dictionary.date             2021-11-08
+    _dictionary.uri              https://www.example.com/test_key.dic
+    _dictionary.ddl_conformance  4.1.0
+    _dictionary.namespace        SoftwareTest
     _description.text
 ;
     This dictionary contains fake definitions of looped categories with
@@ -30,6 +30,10 @@ data_FAKE_KEY_DIC
     0.1.0 2021-10-28
 ;
   Added the LOOPED_IMAG_CATEGORY and LOOPED_COMPLEX_CATEGORY categories.
+;
+    0.2.0 2021-11-08
+;
+  Added the LOOPED_WORD_CATEGORY categories.
 ;
 
 save_LOOP_PARENT
@@ -153,6 +157,63 @@ save_looped_text_category.placeholder_content
      A placeholder data item.
 ;
     _name.category_id            looped_text_category
+    _name.object_id              placeholder_content
+    _type.purpose                Describe
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Text
+save_
+
+save_LOOPED_WORD_CATEGORY
+    _definition.id               LOOPED_WORD_CATEGORY
+    _definition.scope            Category
+    _definition.class            Loop
+    _definition.update           2021-11-08
+    _description.text
+;
+    A looped category that has a category key of the Word type content.
+;
+    _name.category_id            LOOP_PARENT
+    _name.object_id              LOOPED_WORD_CATEGORY
+    _category.key_id             '_looped_word_category.key'
+    _category_key.name           '_looped_word_category.key'
+save_
+
+save_looped_word_category.key
+    _definition.id               '_looped_word_category.key'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2021-11-08
+    _description.text
+;
+     A key of the Word type content.
+;
+    _description.common
+;
+     A key of the Word type content.
+;
+    _name.category_id            looped_word_category
+    _name.object_id              key
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Word
+save_
+
+save_looped_word_category.placeholder_content
+    _definition.id               '_looped_word_category.placeholder_content'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2021-11-08
+    _description.text
+;
+     A placeholder data item.
+;
+    _description.common
+;
+     A placeholder data item.
+;
+    _name.category_id            looped_word_category
     _name.object_id              placeholder_content
     _type.purpose                Describe
     _type.source                 Assigned
