@@ -1,1 +1,1 @@
-scripts/ddlm_validate: tests/cases/ddlm_validate_047.inp data_FAKE_DIC save_category.default_item: NOTE, data item '_type.contents' is mandatory in the 'Item' scope of the 'category.default_item' frame.
+scripts/ddlm_validate: tests/cases/ddlm_validate_047.inp data_TEST_CONTENTS_TYPE_DIC save_category.default_item: NOTE, data item '_type.contents' is mandatory in the 'Item' scope of the 'category.default_item' frame.
