@@ -1,0 +1,3 @@
+scripts/ddlm_validate: tests/cases/ddlm_validate_090.inp data_word: NOTE, data item '_category.word_item' value '&#10;Multiline_text_with_a_newline' violates content type constraints -- the '&#10;' symbol does not belong to the permitted symbol set.
+scripts/ddlm_validate: tests/cases/ddlm_validate_090.inp data_word: NOTE, data item '_category.word_item' value 'Text	with	tabs' violates content type constraints -- the '	' symbol does not belong to the permitted symbol set.
+scripts/ddlm_validate: tests/cases/ddlm_validate_090.inp data_word: NOTE, data item '_category.word_item' value 'Text with spaces' violates content type constraints -- the ' ' symbol does not belong to the permitted symbol set.
