@@ -17,6 +17,7 @@ cod-tools (unreleased)
     - cif_ddlm_validate:
         - the '--follow-iucr-style-guide' and '--no-follow-iucr-style-guide'
           options.
+        - support for the 'Word' content type.
   * Changed:
     - cif_molecule:
         - reworded several warning messages.
